NLP TP/texts/robotics/robotics.stackexchange_0000064093.txt
Q:

installing indigo on OS X Yosemite

I'm attempting to install indigo on OS  X Yosemite and I'm running into compilation problems for gazebo. I'm trying to follow the instructions found at:
http://wiki.ros.org/indigo/Installation/OSX/Homebrew/Source
However I am stuck at the "Desktop-Full Install" step.
Here is the error portion of the output from running the gazebo install command manually I don't yet have enough points on the website to attach the full log:
    brew install gazebo -v 
# [..snip...]
[ 45%] Building CXX object gazebo/rendering/CMakeFiles/gazebo_rendering.dir/Camera.cc.o
cd /tmp/gazebo-8qUtmK/gazebo-1.9.6/build/gazebo/rendering && /usr/local/Library/ENV/4.3/clang++   -DMAC_OS_X_VERSION=1080 -Dgazebo_rendering_EXPORTS -O3 -DNDEBUG  -Wall -Wextra -Wno-long-long -Wno-unused-value -Wno-unused-value -Wno-unused-value -Wno-unused-value -Wfloat-equal -Wshadow -Winit-self -Wswitch-default -Wmissing-include-dirs -pedantic -msse -msse2 -msse3 -mssse3   -O3 -DNDEBUG  -Wall -Wextra -Wno-long-long -Wno-unused-value -Wno-unused-value -Wno-unused-value -Wno-unused-value -Wfloat-equal -Wshadow -Winit-self -Wswitch-default -Wmissing-include-dirs -pedantic -msse -msse2 -msse3 -mssse3 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk -fPIC -I/tmp/gazebo-8qUtmK/gazebo-1.9.6/test/gtest/include -I/tmp/gazebo-8qUtmK/gazebo-1.9.6 -I/tmp/gazebo-8qUtmK/gazebo-1.9.6/build -isystem /tmp/gazebo-8qUtmK/gazebo-1.9.6/gazebo/rendering/skyx -isystem /tmp/gazebo-8qUtmK/gazebo-1.9.6/gazebo/rendering/skyx/include -F/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks -isystem /usr/local/Cellar/ogre/1.7.4/include/OGRE/RTShaderSystem -isystem /usr/local/Cellar/ogre/1.7.4/include -isystem /usr/local/Cellar/ogre/1.7.4/include/OGRE -isystem /usr/local/include -isystem /usr/local/Cellar/sdformat/2.1.0/include/sdformat-2.1    -fPIC -o CMakeFiles/gazebo_rendering.dir/Camera.cc.o -c /tmp/gazebo-8qUtmK/gazebo-1.9.6/gazebo/rendering/Camera.cc
In file included from /tmp/gazebo-8qUtmK/gazebo-1.9.6/gazebo/rendering/ArrowVisual.cc:24:
In file included from /tmp/gazebo-8qUtmK/gazebo-1.9.6/gazebo/rendering/Scene.hh:30:
In file included from /tmp/gazebo-8qUtmK/gazebo-1.9.6/gazebo/msgs/msgs.hh:24:
In file included from /tmp/gazebo-8qUtmK/gazebo-1.9.6/build/gazebo/msgs/MessageTypes.hh:2:
In file included from /tmp/gazebo-8qUtmK/gazebo-1.9.6/build/gazebo/msgs/axis.pb.h:23:
In file included from /usr/local/include/google/protobuf/message.h:120:
/usr/local/include/google/protobuf/descriptor.h:358:5: error: expected identifier
    TYPE_BOOL           = 8,   // bool, varint on the wire.
    ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/usr/include/ConditionalMacros.h:147:39: note: expanded from macro 'TYPE_BOOL'
     #define TYPE_BOOL                1
                                      ^

Below is the output from the command in the instructions. I tried adding the -v flag to get a more detailed compiler error but that crashed as well.
 rosdep install --from-paths src --ignore-src --rosdistro indigo -y
executing command [brew install gazebo]
==> Installing gazebo from osrf/homebrew-simulation
==> Downloading http://gazebosim.org/assets/distributions/gazebo-1.9.6.tar.bz2
Already downloaded: /Library/Caches/Homebrew/gazebo-1.9.6.tar.bz2
==> Downloading https://gist.githubusercontent.com/scpeters/9199370/raw/afe595587e38737c537124a3
Already downloaded: /Library/Caches/Homebrew/gazebo--patch-eaa6f843ab1264810c0c0a81ff3c52232fd49d12.patch
==> Patching
patching file deps/opende/CMakeLists.txt
==> cmake .. -DCMAKE_INSTALL_PREFIX=/usr/local/Cellar/gazebo/1.9.6 -DCMAKE_FIND_FRAMEWORK=LAST -
==> make install
/usr/local/Library/ENV/4.3/clang++    -O3 -DNDEBUG  -Wall -Wextra -Wno-long-long -Wno-unused-value -Wno-unused-value -Wno-unused-value -Wno-unused-value -Wfloat-equal -Wshadow -Winit-self -Wswitch-default -Wmissing-include-dirs -pedantic -msse -msse2 -msse3 -mssse3   -O3 -DNDEBUG  -Wall -Wextra -Wno-long-long -Wno-unused-value -Wno-unused-value -Wno-unused-value -Wno-unused-value -Wfloat-equal -Wshadow -Winit-self -Wswitch-default -Wmissing-include-dirs -pedantic -msse -msse2 -msse3 -mssse3 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk -dynamiclib -Wl,-headerpad_max_install_names   -Wl,-undefined -Wl,dynamic_lookup -compatibility_version 1.0.0 -current_version 1.9.6 -o libgazebo_transport.1.9.6.dylib -install_name /tmp/gazebo-YYMA8X/gazebo-1.9.6/build/gazebo/transport/libgazebo_transport.1.dylib CMakeFiles/gazebo_transport.dir/CallbackHelper.cc.o CMakeFiles/gazebo_transport.dir/Connection.cc.o CMakeFiles/gazebo_transport.dir/ConnectionManager.cc.o CMakeFiles/gazebo_transport.dir/IOManager.cc.o CMakeFiles/gazebo_transport.dir/Node.cc.o CMakeFiles/gazebo_transport.dir/Publication.cc.o CMakeFiles/gazebo_transport.dir/PublicationTransport.cc.o CMakeFiles/gazebo_transport.dir/Publisher.cc.o CMakeFiles/gazebo_transport.dir/Subscriber.cc.o CMakeFiles/gazebo_transport.dir/SubscriptionTransport.cc.o CMakeFiles/gazebo_transport.dir/TopicManager.cc.o CMakeFiles/gazebo_transport.dir/TransportIface.cc.o  -L/tmp/gazebo-YYMA8X/gazebo-1.9.6/build/test  -L/usr/local/Cellar/ogre/1.7.4/lib  -L/usr/local/Cellar/sdformat/2.1.0/lib ../common/libgazebo_common.1.9.6.dylib ../msgs/libgazebo_msgs.1.9.6.dylib /usr/local/lib/libboost_thread-mt.dylib /usr/local/lib/libboost_signals-mt.dylib /usr/local/lib/libboost_system-mt.dylib /usr/local/lib/libboost_filesystem-mt.dylib /usr/local/lib/libboost_program_options-mt.dylib /usr/local/lib/libboost_regex-mt.dylib /usr/local/lib/libboost_iostreams-mt.dylib /usr/local/lib/libboost_date_time-mt.dylib /usr/local/lib/libtbb.dylib ../common/libgazebo_common.1.9.6.dylib /usr/lib/libdl.dylib /usr/local/lib/libltdl.dylib -lfreeimage -ltinyxml -lcurl -ltar /usr/local/lib/libtbb.dylib -lpthread -lsdformat ../math/libgazebo_math.1.9.6.dylib /usr/local/lib/libboost_thread-mt.dylib /usr/local/lib/libboost_signals-mt.dylib /usr/local/lib/libboost_system-mt.dylib /usr/local/lib/libboost_filesystem-mt.dylib /usr/local/lib/libboost_program_options-mt.dylib /usr/local/lib/libboost_regex-mt.dylib /usr/local/lib/libboost_iostreams-mt.dylib /usr/local/lib/libboost_date_time-mt.dylib /usr/local/lib/libprotobuf.dylib -Wl,-rpath,/tmp/gazebo-YYMA8X/gazebo-1.9.6/build/test -Wl,-rpath,/usr/local/Cellar/ogre/1.7.4/lib -Wl,-rpath,/usr/local/Cellar/sdformat/2.1.0/lib
cd /tmp/gazebo-YYMA8X/gazebo-1.9.6/build/gazebo/transport && /usr/local/Cellar/cmake/3.0.2/bin/cmake -E cmake_symlink_library libgazebo_transport.1.9.6.dylib libgazebo_transport.1.dylib libgazebo_transport.dylib
/usr/local/Cellar/cmake/3.0.2/bin/cmake -E cmake_progress_report /tmp/gazebo-YYMA8X/gazebo-1.9.6/build/CMakeFiles  88
[ 47%] Built target gazebo_transport
make: *** [all] Error 2

READ THIS: http://git.io/brew-troubleshooting
If reporting this issue please do so at (not Homebrew/homebrew):
  https://github.com/osrf/homebrew-simulation/issues

ERROR: the following rosdeps failed to install
  homebrew: command [brew install gazebo] failed

Originally posted by Andrew Hundt on ROS Answers with karma: 11 on 2014-11-18
Post score: 1

Original comments
Comment by William on 2014-11-18:
The actual error doesn't seem to be in the output, can you try to get the build output from brew install gazebo -v?
Comment by Andrew Hundt on 2014-11-19:
I attached the actual compiler error I'm getting

A:

This is the relevant error:
In file included from /tmp/gazebo-8qUtmK/gazebo-1.9.6/gazebo/rendering/ArrowVisual.cc:24:
In file included from /tmp/gazebo-8qUtmK/gazebo-1.9.6/gazebo/rendering/Scene.hh:30:
In file included from /tmp/gazebo-8qUtmK/gazebo-1.9.6/gazebo/msgs/msgs.hh:24:
In file included from /tmp/gazebo-8qUtmK/gazebo-1.9.6/build/gazebo/msgs/MessageTypes.hh:2:
In file included from /tmp/gazebo-8qUtmK/gazebo-1.9.6/build/gazebo/msgs/axis.pb.h:23:
In file included from /usr/local/include/google/protobuf/message.h:120:
/usr/local/include/google/protobuf/descriptor.h:358:5: error: expected identifier
    TYPE_BOOL           = 8,   // bool, varint on the wire.
    ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/usr/include/ConditionalMacros.h:147:39: note: expanded from macro 'TYPE_BOOL'
     #define TYPE_BOOL                1
                                      ^

Since I am not seeing this in 10.9, I would guess that the collision between protobuf's type macro (in /usr/local/include/google/protobuf/descriptor.h) and the #define in Apple's SDK is new.
I would try to update homebrew and then protobuf. Alternatively we may need to update something in the gazebo formula. Either way I would open a ticket at https://github.com/osrf/homebrew-simulation/issues.

Originally posted by William with karma: 17335 on 2014-11-19
This answer was ACCEPTED on the original site
Post score: 1

